[risk=low][RW-10064] POC: Use the Leonardo Java client to replace one endpoint call (#8829)